--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,17 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+web-report/
+
+# macOS
+.DS_Store
